# nockapp

./: Cargo.toml  blog.sh
blog/: Cargo.toml  http.jam  main.rs
blog/hoon/lib/: http-builder.hoon  kernel.hoon
image-processing/: README.md  package.json
image-processing/hoon/lib/: imgproc-builder.hoon  imgproc-kernel.hoon
image-processing/src/: app.html
image-processing/src-tauri/: Cargo.toml  imgproc.jam  tauri.conf.json
image-processing/src-tauri/src/: main.rs
image-processing/src/routes/: +page.svelte
todo/: Cargo.toml  kernel.jam
todo/hoon/lib/: http-kernel.hoon
todo/src/: main.rs
