[package]
name = "image-processing"
version.workspace = true
edition.workspace = true

[dependencies]
crown = { path = "../../crown" }
sword = { workspace = true }
sword_macros = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
